# AdventOfCode2025

./: .gitignore  README.md  benchmark.py  pyproject.toml
.github/workflows/: python-app.yml
aoc/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py
template/: template_generator.py
template/files/: template_day.py.j2  template_test.py.j2
tests/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py
